# goldsrc-glib

./: meson.build  meson.options
.github/workflows/: make-docs.yml
docs/: about-rmf.md  meson.build  rmf.toml.in  urlmap.js
docs/rmf/: about-rmf.md  meson.build  rmf.toml.in
docs/static/: index.html
docs/wad/: about-wad.md  meson.build  wad.toml.in
rmf/: meson.build  rmf-entity.c  rmf-entity.h  rmf-entitydata.c  rmf-entitydata.h  rmf-group.c  rmf-group.h  rmf-iterator.c  rmf-iterator.h  rmf-loader.c  rmf-loader.h  rmf-mapobject.c  rmf-mapobject.h  rmf-private.h  rmf-root.c  rmf-root.h  rmf-solid.c  rmf-solid.h  rmf-structs.c  rmf-structs.h  rmf-types.c  rmf-types.h  rmf-worldspawn.c  rmf-worldspawn.h  rmf.h
wad/: meson.build  wad-directoryentry.c  wad-directoryentry.h  wad-fontfile.c  wad-fontfile.h  wad-inputstream.c  wad-inputstream.h  wad-loaderror.c  wad-loaderror.h  wad-miptexfile.c  wad-miptexfile.h  wad-qpicfile.c  wad-qpicfile.h  wad-rgb.h  wad-root.c  wad-root.h  wad-texturearchive.c  wad-texturearchive.h  wad.h
wad/test/: demo.c  test.c
