# Introspection

option(
  'introspection',
  type: 'feature',
  value: 'auto',
  yield: true,
  description: 'Build introspection data (requires gobject-introspection)',
)

# Documentation

option(
  'documentation',
  type: 'boolean',
  value: false,
  description: 'Build API reference and tools documentation',
)

# Tests

option(
  'test',
  type: 'boolean',
  value: false,
  description: 'Build test executables',
)
